Implement the CLI with the initial spec

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "better-image-naming"
+name = "imgname"
 version = "0.1.0"
 description = "Rename an image file based on its content using a vLLM served by local ollama"
 readme = "README.md"
@@ -8,3 +8,12 @@ dependencies = [
     "ollama~=0.6.1",
     "typer>=0.20.1",
 ]
+
+[project.scripts]
+imgname = "imgname:app"
+
+[tool.uv]
+package = true
+
+[tool.setuptools]
+packages = ["imgname"]
